wip: split tests - adoc